# xBase3

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
src/: ast.c  ast.h  commands.c  commands.h  dbf.c  dbf.h  expr.c  expr.h  functions.c  functions.h  handlers.c  handlers.h  json.c  json.h  lexer.c  lexer.h  main.c  parser.c  parser.h  server.c  server.h  util.c  util.h  variables.c  variables.h  xdx.c  xdx.h
tests/: CMakeLists.txt  test_dbf.c  test_expr.c  test_lexer.c  test_parser.c  test_xdx.c
